<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/todoListFragment">

    <fragment
        android:id="@+id/todoListFragment"
        android:name="com.yourdomain.todomanager.ui.todos.TodoListFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_todoListFragment_to_addEditTodoFragment"
            app:destination="@id/addEditTodoFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditTodoFragment"
        android:name="com.yourdomain.todomanager.ui.todos.AddEditTodoFragment"
        android:label="AddEditTodoFragment">
        <argument
            android:name="todoId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.yourdomain.todomanager.ui.auth.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_todoListFragment"
            app:destination="@id/todoListFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.yourdomain.todomanager.ui.auth.RegisterFragment"
        android:label="@string/register">
        <action
            android:id="@+id/action_registerFragment_to_todoListFragment"
            app:destination="@id/todoListFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation> 